--- a/src/ocamlorg_frontend/css/styles.css
+++ b/src/ocamlorg_frontend/css/styles.css
@@ -7,6 +7,7 @@
 @import "./partials/forms.css";
 @import "./partials/grid_logos.css";
 @import "./partials/header.css";
+@import "./partials/package_documentation.css";
 @import "./partials/shadows.css";
 @import "./partials/tags.css";
 @import "./partials/typography.css";
