--- a/src/ocamlorg_frontend/css/partials/forms.css
+++ b/src/ocamlorg_frontend/css/partials/forms.css
@@ -1,28 +1,32 @@
-.form-input {
-  @apply relative h-14;
-}
+@layer components {
 
-.form-input .form-input__icon {
-  @apply absolute h-full flex items-center pl-6 opacity-60;
-}
+  /* shared styles between form-input variants */
 
-.form-input i {
-  @apply text-body-600 relative;
-  top: 1px;
-}
+  .form-input, .form-input-with-button {
+    @apply h-10;
+  }
 
-.form-input input {
-  @apply w-full font-normal lg:w-96 text-body-600 border pl-14 rounded-md h-full pr-4 border-gray-200 placeholder-body-400 outline-none focus:border-primary-600;
-}
+  .form-input input, .form-input-with-button input {
+    @apply h-full w-full font-medium focus:border-primary-600 focus:ring-0 text-gray-800 border-primary-600 rounded-md px-3 py-1 placeholder-body-400 appearance-none focus:outline-none;
+  }
 
-.form-input.form-input-sm {
-  @apply h-12;
-}
+  /* form-input */
 
-.form-input.form-input-sm input {
-  @apply pl-11;
-}
+  .form-input {
+    @apply rounded-md focus-within:outline-primary-300 focus-within:outline focus-within:outline-2;
+  }
 
-.form-input.form-input-sm .form-input__icon {
-  @apply pl-4;
+  /* form-input-with button */
+
+  .form-input-with-button {
+    @apply flex items-center justify-center rounded-md focus-within:outline focus-within:outline-primary-300 focus-within:outline-2;
+  }
+
+  .form-input-with-button input {
+    @apply rounded-r-none;
+  }
+
+  .form-input-with-button button {
+    @apply h-full flex items-center justify-center rounded-r-md bg-primary-600 text-white px-4;
+  }
 }
