refactor tailwind colors, start componentizing more

--- a/src/ocamlorg_frontend/css/partials/buttons.css
+++ b/src/ocamlorg_frontend/css/partials/buttons.css
@@ -36,10 +36,10 @@
   }
 
   .btn-tertiary:hover {
-    @apply bg-white bg-opacity-10;
+    @apply bg-default dark:bg-dark-default bg-opacity-10;
   }
 
   .btn-tertiary:active {
-    @apply bg-white bg-opacity-20;
+    @apply bg-default dark:bg-dark-default bg-opacity-20;
   }
 }
