--- a/src/ocamlorg_frontend/css/styles.css
+++ b/src/ocamlorg_frontend/css/styles.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  @apply bg-background-default text-body-600;
+  @apply bg-mild-contrast dark:bg-dark-mild-contrast text-default dark:text-dark-default;
   font-family: "Inter", sans-serif;
 }
 
@@ -41,6 +41,7 @@ body {
 }
 
 .bg-pattern {
+  @apply text-white;
   background-image: url("/img/bg-pattern.jpg");
   background-size: cover;
 }
@@ -73,7 +74,7 @@ body {
 }
 
 .intro-section-simple p {
-  @apply text-body-400 lg:text-lg;
+  @apply text-lighter lg:text-lg;
 }
 
 .divider span {
@@ -175,7 +176,7 @@ table a:hover {
 }
 
 .right-sidebar a:hover {
-  @apply text-orange-600;
+  @apply text-primary-600;
 }
 
 .news-stories button:hover {
@@ -203,7 +204,7 @@ footer a:hover {
 }
 
 .page-toc li a {
-  @apply font-semibold text-body-600 text-sm mb-4 block;
+  @apply font-semibold text-default text-sm mb-4 block;
 }
 
 .page-toc li li li {
